uso de overflow-auto

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <div class="col text-success">
                     Column
                   </div>
-                  <div class="col h-100">
+                  <div class="col h-100 overflow-auto">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingOne">
